@@ -183,9 +183,10 @@ class WFIncluding
                 'FCKEditor' => FRAMEWORK_DIR . '/wwwroot/www/framework/FCKEditor/fckeditor.php',
 
                 // propel
-                'WFPagedPropelQuery' => 'framework/WFPagination.php',
-                'WFModelBuilderPropel' => 'framework/generator/WFGeneratorPropel12_13.php',
+                'WFPagedPropelQuery'     => 'framework/WFPagination.php',
+                'WFModelBuilderPropel'   => 'framework/generator/WFGeneratorPropel12_13.php',
                 'WFModelBuilderPropel15' => 'framework/generator/WFGeneratorPropel15.php',
+                'WFPropelException'      => 'framework/util/WFPropelIntegration.php',
 
                 // PHPUnit
                 'PhocoaControllerTestCase_PHPUnit' => 'phpunit/PhocoaControllerTestCase_PHPUnit.php',
