@@ -10,6 +10,8 @@ Legend:
                               WF_LOG_DEPRECATED && WFLog::deprecated("MyObj::foo() is deprecated. Use MyObj::bar().");
 
 Version 0.4.0 - ??
+- [improved] Refactored WFErrorArray and WFErrorsException to implement a new interface WFErrorCollection.
+- [new] Phocoa now includes a PropelException subclass WFPropelException to allow you to play nice with propel nested transactions while still supporting phocoa model error reporting.
 - [new] Add WFDecorator support to KVC. You can now use the [WFDecorator] syntax inside of KVC keyPaths to auto-wrap objects in decorators. Works on arrays as well.
         Example: "tour.customer[MyCustomerDecorator].decoratorGetter"
         Example: "tour.customers[MyCustomerDecorator].decoratorGetter"
